OpenVi 7.0.10 -> OpenVi 7.0.11-dev (Unreleased): Sat Feb 12 11:23:57 2022
        + Update bundled OpenBSD getopt_long to 1.32 2020/05/27 22:25:09
        + Update bundled basename to 1.17 2020/10/20 19:30:14
        + Add initial Midipix support

OpenVi 7.0.9 -> OpenVi 7.0.10: Wed Feb 9 16:36:25 2022
        + Silence some warnings and general style clean-up
        + Clarify text of some visual mode messages; use the POSIX thousands
          numeric seperator for displaying most line and character counts
        + Use `/var/tmp` for the `vi.recover` directory; on most Linux
          systems, this persists across reboots and gives a higher chance
          of recovery than `/tmp` which is often a memory-backed filesystem
        + New feature: If `ruler` is set, print a percentage after position
        + New feature: If `windowname` is set, always show the file name
        + New feature: If `bserase` (abbrev `bse`) is set, then any newly
          backspaced characters are immediately erased from the screen
        + Handle `SIGQUIT` like `SIGINT`, which prevents `^\` (Control-\)
          from causing ex-mode to abort and drop core; aligns closer to
          Vim's behavior in ex-mode - which uses non-canonical input mode,
          so `^\` doesn't cause a stop.  The rationale for this change is
          because we're using `^\` as a shortcut to enter our ex-mode (which
          for `nex` uses standard canonical line-based input), if `SIGQUIT`
          is unhandled, it's easy to abort by accident by sending more than
          one `^\` in succession, which can happen on lagged connection.
        + Fix a long-standing bug where using `^G` on an empty file would
          include a random garbage byte in the displayed output
        + Reword "Already in the first column" to "Already at the first
          column" to be consistent with the other movement error messages
        + Remove documentation files not explicitly under the 3-BSD license