@@ -1,6 +1,7 @@
-OpenVi 7.0.10 -> OpenVi 7.0.11-dev (Unreleased): Sat Feb 12 11:23:57 2022
+OpenVi 7.0.10 -> OpenVi 7.0.11-dev (Unreleased): Sat Feb 12 11:33:59 2022
+        + Update bundled OpenBSD reallocarray to 1.3 2015/09/13 08:31:47
         + Update bundled OpenBSD getopt_long to 1.32 2020/05/27 22:25:09
-        + Update bundled basename to 1.17 2020/10/20 19:30:14
+        + Update bundled OpenBSD basename to 1.17 2020/10/20 19:30:14
         + Add initial Midipix support
 
 OpenVi 7.0.9 -> OpenVi 7.0.10: Wed Feb 9 16:36:25 2022
